--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -30,7 +30,7 @@
         <div class="link-group">
           <h4>Company</h4>
           <ul>
-            <li><a href="#about">About Us</a></li>
+            <li><a href="#how-it-works">How it Works</a></li>
             <li><a href="#services">Solutions</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="#">Case Studies</a></li>
