--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,7 +16,7 @@
           <a href="#home" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-          <a href="#about" class="nav-link">How it works</a>
+          <a href="#how-it-works" class="nav-link">How it works</a>
         </li>
         <li class="nav-item">
           <a href="#services" class="nav-link">Features</a>
