Change Services section to Features

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,10 +20,10 @@
         <div class="link-group">
           <h4>Services</h4>
           <ul>
-            <li><a href="#services">AI Strategy</a></li>
-            <li><a href="#services">Data Analytics</a></li>
-            <li><a href="#services">Process Optimization</a></li>
-            <li><a href="#services">Digital Transformation</a></li>
+            <li><a href="#features">AI Strategy</a></li>
+            <li><a href="#features">Data Analytics</a></li>
+            <li><a href="#features">Process Optimization</a></li>
+            <li><a href="#features">Digital Transformation</a></li>
           </ul>
         </div>
         
@@ -31,7 +31,7 @@
           <h4>Company</h4>
           <ul>
             <li><a href="#how-it-works">How it Works</a></li>
-            <li><a href="#services">Solutions</a></li>
+            <li><a href="#features">Solutions</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="#">Case Studies</a></li>
           </ul>
