--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,7 +19,7 @@
           <a href="#how-it-works" class="nav-link">How it works</a>
         </li>
         <li class="nav-item">
-          <a href="#services" class="nav-link">Features</a>
+          <a href="#features" class="nav-link">Features</a>
         </li>
         <li class="nav-item">
           <a href="#blog" class="nav-link">Blog</a>
